# cifar10_with_lightning

./: .gitignore  README.md  main.py  pyproject.toml
data_model/: DataModule.py  __init__.py
model/: DataModule.py  Model.py  Train.py  __init__.py
