[tool.poetry]
name = "cifar10"
version = "0.1"
description = ""
authors = ["alximikl2"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.*"
lightning = "^2.1.*"
pytorch = "^2.1.*"
torchvision = "^0.16.*"
wandb = "^0.15.*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
